fixed navbar error ul visibility

--- a/component/navbar/navbar.module.css
+++ b/component/navbar/navbar.module.css
@@ -20,6 +20,7 @@
 .ul{
     display: flex;
     list-style: none;
+    left: 0%;
 }
 .li{
     margin-left: 1rem;
